--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ POSTGRES_HOST=contable_db17
 POSTGRES_PORT=5432
 
 # PgAdmin Configuration
-PGADMIN_EMAIL=mm23047@ues.edu.sv
+PGADMIN_EMAIL=lv22015@ues.edu.sv
 PGADMIN_PASSWORD=abc123
 PGADMIN_PORT=5050
